<resources>
    <string name="app_name">MyFinalProject</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="select">Select</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="txt_Alarm_ON">Alarm ON</string>
    <string name="txt_Alarm_OFF">Alarm OFF</string>
    <string name="product_name">Product</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="quantity">Quantity</string>
    <string name="delete">Delete</string>
    <string name="add_new_item_title">Add New Item</string>
    <string name="Name">Name:</string>
    <string name="quantityDot">Quantity:</string>
    <string name="save">Save</string>
    <string name="fill_all_fields">Please Fill All The Fields</string>
    <string name="remove_item_btnDialog">Do you want to delete the item from the list?</string>
    <string name="remove_list_btnDialog">Do you want to delete all the list?</string>
    <string name="added_to_list_toast">The item was added to the list</string>
    <string name="clear_btn">Clear List</string>
</resources>